--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -93,6 +93,10 @@
                          groupName="Database" groupPath="PHP,Framework,Yii2"
                          enabledByDefault="true" level="ERROR"
                          implementationClass="com.nvlad.yii2support.database.MissingActiveRecordInActiveQueryInspection"/>
+
+        <!-- Validation -->
+        <completion.contributor language="PHP" implementationClass="com.nvlad.yii2support.validation.ValidationCompletionContributor"/>
+
     </extensions>
 
     <actions>
